Implementação dos Filtros

--- a/src/global.css
+++ b/src/global.css
@@ -2,10 +2,9 @@
 * {
     font-family: 'Fira Code', monospace;
 }
-
+/* 
 body {
-    height: 100vh;
     margin: 0;
     background-color: #222222;
     color: #fff;
-}
+} */
