--- a/src/pages/Chat/styles.css
+++ b/src/pages/Chat/styles.css
@@ -1,13 +1,16 @@
-.chat-box {
+.container {
     width: 100%;
     max-width: 1120px;
-    height: 90vh;
     margin: 0 auto;
-    /* display: flex; */
+}
+
+.chat-box {
+    padding: 10px;
+    margin-top: 10px;
+    height: 90vh;
     align-items: center;
     justify-content: space-between;
     box-shadow: 1px 1px 2px rgb(139, 139, 139);
-    
 }
 
 .chat-box::-webkit-scrollbar {
@@ -17,7 +20,7 @@
 .chat-box section.form {
     font-size: 16px;
     padding: 10px;
-    position: fixed;
+    /* position: fixed; */
     align-self: bottom;
     width: 100%;
     max-width: 1100px;
@@ -26,9 +29,9 @@
 .chat-box section.form input {
     font-size: 16px;
     width: 90%;
-    background-color: #222;
-    color: #fff;
-    border: 1px #fff solid;
+    /* background-color: #222; */
+    /* color: #fff; */
+    /* border: 1px #fff solid; */
     border-radius: 4px;
 }
 
@@ -37,6 +40,6 @@
 }
 
 .chat-messages {
-    height: 80vh;
+    height: 70vh;
     overflow-y: scroll;
 }
