--- a/src/pages/Chat/styles.scss
+++ b/src/pages/Chat/styles.scss
@@ -23,7 +23,6 @@
 .chat-box section.form {
     font-size: 16px;
     padding: 10px;
-    /* position: fixed; */
     align-self: bottom;
     width: 100%;
     max-width: 1100px;
@@ -60,4 +59,14 @@
     height: 65vh;
     overflow-y: scroll;
     border-top: 1px solid darken($bg-color, 10);
+}
+
+.message--header {
+    color: lighten($color-primary, 70);
+    // display: flex;
+    font-size: 13px;
+}
+
+.message--body {
+    font-size: 15px;
 }
