Criação da Documentação

--- a/src/pages/Chat/styles.scss
+++ b/src/pages/Chat/styles.scss
@@ -57,8 +57,17 @@
 
 .chat-messages {
     height: 65vh;
-    overflow-y: scroll;
+    overflow: hidden;
     border-top: 1px solid darken($bg-color, 10);
+    width: 100%;
+
+    &-roll {
+        width: 100%;
+        height: 100%;
+        overflow-y: scroll;
+        padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+        box-sizing: content-box;
+    }
 }
 
 .message--header {
